--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="resume">
+  <meta name="author" content="862317115">
 
-  <title>John Doe - Business Administration</title>
+  <title>Tiffany Kim - Neuroscientist </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Tiffany Kim</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/tiffanykim.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,40 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Tiffany Kim
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Neuroscience</div>
+        <p class="lead mb-4">20 yr old College Student attending UCR<br><br>
 
-        Enter bio here<br><br>
+        My name is Tiffany Kim, and I find profound fascination in the intricate workings of the human brain and nervous system. Currently in my third year at the esteemed University of California, Riverside (UCR), I am pursuing a major in neuroscience. The pursuit of understanding the complexities of the human mind has been a driving force throughout my academic journey.
 
-        Enter bio here
+Originating from Fullerton, located in the vibrant heart of Orange County, California, I have always been drawn to the interconnectedness of science and its applications in improving human health and well-being. Growing up in a community known for its diversity and innovation has greatly influenced my perspectives and aspirations.
+
+UCR has provided me with a nurturing environment where I have been able to delve deep into my passion for neuroscience. From dissecting the neural pathways of model organisms to exploring the latest research in cognitive psychology, my coursework has been both rigorous and rewarding. Beyond the classroom, I have had the privilege of engaging in research projects that have allowed me to apply theoretical knowledge to real-world problems.
+
+While my academic journey has been centered around neuroscience, my ambitions extend beyond the laboratory. I am driven by a desire to make a tangible impact in the field of healthcare. It is with this aspiration in mind that I have set my sights on a career in physical therapy or sports medicine.
+
+The prospect of working directly with individuals to aid in their physical recovery and well-being is immensely fulfilling to me. Whether it's helping athletes regain their mobility after an injury or assisting patients in managing chronic pain, I am drawn to the hands-on nature of these professions. Moreover, the opportunity to blend my understanding of neuroscience with practical rehabilitation techniques excites me, as it allows for a holistic approach to healing.
+
+My journey towards pursuing physical therapy or sports medicine is not only driven by my academic interests but also by my personal experiences. Witnessing the transformative power of rehabilitation firsthand, whether through my own encounters with physical therapy or observing its impact on others, has solidified my commitment to this path.
+
+Looking ahead, I am eager to continue expanding my knowledge and skills through internships, volunteer opportunities, and further academic pursuits. Additionally, I am keen on exploring interdisciplinary approaches that integrate neuroscience with rehabilitation sciences to enhance patient outcomes.
+
+In conclusion, as a third-year neuroscience student at UCR hailing from Fullerton, Orange County, my passion for understanding the complexities of the human brain fuels my ambition to pursue a career in physical therapy or sports medicine. With a blend of academic rigor, practical experience, and personal dedication, I am determined to make meaningful contributions to the health and well-being of individuals in need.<br><br>
+
+        Tiffany Kim, 3rd Year Student With Neuroscience Background
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://indeed.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://instagram.com">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://facebook.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:tiffanykim0626@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +106,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.drandrewchiropractic.com/">Prime Wellness Center</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Assisted in the digitalization of paperowk and files, improving office efficiency<br> 
+              • Shadowed the chiropractor throughout patient treatment sessions, gaining valuable insights into Chiropractic care<br>
+              • Acquired knowledge of physical therapy techniques, enhancing my understanding of musculoskeletal health<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2023 - August 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href=https://www.ted.com/>TEDxIVC</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assisted in production, stage management, technology, and video-related tasks for the event<br>
+              • Attended bi-weekly team meetings and facilitated planning for monthly schedule<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2019 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.gmiem.org/">Grace Ministry</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Watched over children as parents attended service<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2015 - January 2016</span>
           </div>
         </div>
 
@@ -152,33 +163,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Continuing Undergraduate of Neuroscience</div>
+            <div>BS in Neuroscience</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021 - June 2025</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Sunny Hills High School</h3>
+            <div class="subheading mb-3">High School Graduate</div>
+            <div>Student</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2017 - June 2021</span>
           </div>
         </div>
 
@@ -191,7 +191,13 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/pwc.jpeg" width="500px">
+        <center>
+    <img src="img/img_4486.jpeg" width="500px"><br>
+    <center></center>
+    <img src="img/img_8406.jpeg" width="500px">
+    <center>
+    <img src="img/68914095601__3385872C-2861-4C35-A0EB-DF22382140E3.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +205,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Tiffany Kim</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
